prompt note z-index bug fix

--- a/src/assets/scss/componentStyles/generator.scss
+++ b/src/assets/scss/componentStyles/generator.scss
@@ -99,7 +99,7 @@
     transition: ease opacity 0.3s, transform ease 0.3s, ease max-width 0.3s,
       top ease 0.5s, max-height ease 0.5s, z-index ease 0.3s,right ease 0.3s;
     transform: translateY(0);
-    z-index: -1;
+    z-index: -200;
     user-select: none;
     &_active {
       right: 50px;
